[package]
name = "whatlang-rb"
version = "0.1.3"
authors = ["Kitaiti Makoto <KitaitiMakoto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rutie = { version = "0.8.4", features = ["no-link"] }
whatlang = "0.15.0"

[lib]
crate-type = ["cdylib"]
