[package]
name = "whatlang-rb"
version = "0.1.6"
authors = ["Kitaiti Makoto <KitaitiMakoto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rutie = { version = "0.9.0", features = ["no-link"] }
whatlang = "0.16.3"

[lib]
crate-type = ["cdylib"]
